# Projet_Fil_Rouge_CLion

./: CMakeLists.txt  Makefile  log.txt  main.c  main.out  menu.c
Analyse_Phrase/: Analyse.c  Analyse.h
Dictionnaire/: Forward_movement_FR.txt  backward_movement_FR.txt  dict_backward.txt  dict_object.txt  negation_FR.txt  rotation_FR.txt  unite_FR.txt
Dictionnaire/EN/Color/: blue.txt  red.txt  yellow.txt
Dictionnaire/EN/Conjunction/: conjunction.txt
Dictionnaire/EN/Direction/: backward_direction.txt  right_direction.txt
Dictionnaire/EN/Movement/: forward_movement.txt
Dictionnaire/EN/Object/: cube.txt  sphere.txt
Dictionnaire/EN/Unite/: centimeter.txt  degree.txt  meter.txt  unite.txt
Dictionnaire/FR/Color/: blue.txt  red.txt  yellow.txt
Dictionnaire/FR/Conjonction/: conjunction.txt
Dictionnaire/FR/Direction/: backward_direction.txt  forward_direction.txt  left_direction.txt  right_direction.txt
Dictionnaire/FR/Mouvement/: forward_movement.txt  movement.txt  rotation.txt  rotation_FR.txt
Dictionnaire/FR/Negation/: negation.txt
Dictionnaire/FR/Objet/: cube.txt  objet.txt  objet_FR.txt  sphere.txt
Dictionnaire/FR/Unite/: centimeter.txt  degree.txt  meter.txt  unite_FR.txt
Découpage/: Decoupage.c  Decoupage.h
Image/: analyse_image.c  analyse_image.h  header.h  image.c  image.h  imageTreatmentCalling.c  imageTreatmentCalling.h  main.c  scan_image.c  test.c  traitement_image.c  traitement_image.h
Image/Banque/: IMG_01.txt  IMG_05.txt  IMG_07.txt  IMG_09.txt  IMG_10.txt  IMG_12.txt  IMG_16.txt  IMG_18.txt  IMG_20.txt
Image/ColorAnalysis/: colorAnalysis.c  colorAnalysis.h
Image/ObjectAnalysis/: objectAnalysis.c  objectAnalysis.h
Image/banque/: IMG_02.txt  IMG_06.txt  IMG_08.txt  IMG_11.txt  IMG_14.txt  IMG_19.txt  IMG_5391.txt  IMG_5392.txt  IMG_5401.txt  IMG_5403.txt  IMG_5405.txt
Image/imageTreatment/: imageTreatment.c  imageTreatment.h
JPEG_Library/lib/: libjpeg.9.dylib  libjpeg.la
JPEG_Library/lib/pkgconfig/: libjpeg.pc
Log/: fichier_Log.c  fichier_Log.h  logFile.c  logFile.h
Menu/: menu.c  menu.h
Regroupement/: Regroupement.c  Regroupement.h
Transcription/Analyse_Phrase/: Analyse.c
Transcription/Dictionnaire/EN/Direction/: forward_direction.txt  left_direction.txt
Transcription/Dictionnaire/EN/Movement/: backward_movement.txt  movement.txt  rotation.txt
Transcription/Dictionnaire/EN/Negation/: negation.txt
Transcription/Dictionnaire/EN/Object/: object.txt
Transcription/Dictionnaire/FR/Mouvement/: backward_movement.txt
Transcription/Découpage/: Decoupage.c  Decoupage.h
Transcription/Regroupement/: Regroupement.c  Regroupement.h
